[project]
name = "asymmetree"
dynamic = ["version"]
description = "An interactive decision tree building tool."
readme = "README.md"
requires-python = ">=3.12"
authors = [
  {name = "Aoxue Chen", email = "jhcax126@outlook.com"}
]
maintainers = [
  {name = "Aoxue Chen", email = "jhcax126@outlook.com"}
]
dependencies = [
    "numba>=0.61.2",
    "numpy>=2.2.6",
    "pandas>=2.3.0",
]
license = "GPL-3.0-or-later"
license-files = ["LICEN[CS]E*", "vendored/licenses/*.txt", "AUTHORS.md"]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
]
